Add fixed test cases and null checks to Duel